<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_view"
    android:background="@color/backgroundColor">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boo"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="200dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16dp"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cameraErrorPermission"/>




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_bt_shape"
            android:text="@string/allow"
            android:id="@+id/retryButton"
            android:elevation="5dp"
            android:textColor="#fff" />
    </LinearLayout>




    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/smartphone_hand"
        android:layout_gravity="bottom|center"/>

</FrameLayout>