<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="com.atlas.atlas.auth.LoginActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="256dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginBottom="3dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/login_screen_portrait_header"
                android:layout_width="88dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_logo" />
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:textColorHint="@color/colorPrimaryLight">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_username_input"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/login_selector_bg_edit"
                android:gravity="center_vertical"
                android:hint="@string/phoneNumber"
                android:inputType="textPersonName"
                android:paddingBottom="2dp"
                android:textColor="@color/colorPrimaryLight"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@drawable/login_bg_input_cursor"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/colorPrimaryLight">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/login_selector_bg_edit"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="2dp"
                android:textColor="@color/colorPrimaryLight"
                android:textColorHighlight="@color/white"
                android:textCursorDrawable="@drawable/login_bg_input_cursor"
                android:textSize="18sp" />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/loginSubmitButton"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_bt_shape_stroke"
            android:elevation="8dp"
            android:fontFamily="sans-serif"
            android:onClick="submitLoginInfo"
            android:text="@string/submit"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/loginErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="error"
            android:textColor="#ff0003"
            android:textSize="14dp"
            android:visibility="gone" />

        <com.atlas.atlas.general.LinearProgressBar
            android:id="@+id/linearProgressBar"
            android:layout_width="200dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="23dp"
            android:visibility="gone"
            app:backgroundColor2="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_bt_shape_stroke"
            android:elevation="8dp"
            android:fontFamily="sans-serif"
            android:onClick="goToLogin"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="20dp" />




        <Button
            android:id="@+id/loginRegisterButton"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_bt_shape_stroke"
            android:elevation="8dp"
            android:fontFamily="sans-serif"
            android:onClick="registerButton"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16dp" />

    </LinearLayout>


</FrameLayout>
